--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body bgcolor="">
 <div align="center">
 <p><strong>TE AMO   TE AMO   TE AMO   TE AMO   TE AMO   TE AMO  TE AMO</strong></P>
-<img src="C:\Users\edi24\Desktop\site da pri\1.png" width="140" heigt="100"/>
+<img src="C:\Users\edi24\Desktop\site da pri\Nova pasta (4)\.git\refs\tags\1.png" width="140" heigt="100"/>
 <p><strong>TE AMO   TE AMO   TE AMO   TE AMO   TE AMO   TE AMO  TE AMO</strong></P>
 <img src="C:\Users\edi24\Desktop\site da pri\0.jpeg" width="160" heigt="120"/>
-<img src="C:\Users\edi24\Desktop\site da pri\00.jpeg" width="160" heigt="120"/>
+<img src="C:\Users\edi24\Desktop\site da pri\Nova pasta (4)\.git\refs\heads\00.jpeg" width="160" heigt="120"/>
 <p><strong>TE AMO   TE AMO   TE AMO   TE AMO   TE AMO   TE AMO  TE AMO</strong></P>
 <img src="C:\Users\edi24\Desktop\site da pri\4.jpeg" width="160" heigt="120"/>
 <img src="C:\Users\edi24\Desktop\site da pri\5.jpeg" width="160" heigt="120"/>
 <p><strong>TE AMO   TE AMO   TE AMO   TE AMO   TE AMO   TE AMO  TE AMO</strong></P>
-<img src="C:\Users\edi24\Desktop\site da pri\3.jpeg" width="160" heigt="120"/>
+<img src="C:\Users\edi24\Desktop\site da pri\Nova pasta (4)\.git\refs\heads\3.jpeg" width="160" heigt="120"/>
 <img src="C:\Users\edi24\Desktop\site da pri\2.jpeg" width="160" heigt="120"/>
 <p><strong>TE AMO   TE AMO   TE AMO   TE AMO   TE AMO   TE AMO  TE AMO</strong></P>
 <img src="C:\Users\edi24\Desktop\site da pri\8.jpeg" width="160" heigt="120"/>
